# GroundStation

./: .gitignore  CMakeLists.txt  GroundStation.ioc  STM32H743ZITx.ld  STM32H743ZITx_FLASH.ld
App/: CMakeLists.txt  app_main.c  app_main.cpp  app_main.h
App/FreeRTOSTasks/: CMakeLists.txt
App/FreeRTOSTasks/Inc/: CMakeLists.txt  RF_RXTask.hpp  RF_TXTask.hpp  Task.hpp  TransceiverTask.hpp  UARTGatekeeperTask.hpp
App/FreeRTOSTasks/Src/: RF_RXTask.cpp  RF_TXTask.cpp  TransceiverTask.cpp  UARTGatekeeper.cpp
Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
Drivers/AT86RF215/: CMakeLists.txt
Drivers/AT86RF215/Inc/: CMakeLists.txt  at86rf215.hpp  at86rf215config.hpp
Drivers/AT86RF215/Src/: at86rf215.cpp
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_timebase_tim.c
Lib/FreeRTOS/: CMakeLists.txt
Lib/FreeRTOS/config/: CMakeLists.txt  FreeRTOSApplicationConfig.c  FreeRTOSConfig.h
Lib/FreeRTOS/inc/: CMakeLists.txt
Lib/FreeRTOS/port/: CMakeLists.txt
Lib/etl-20.38.17/test/: maincpp03check.cpp
Lib/logger-main-c6abda2e/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py
Lib/logger-main-c6abda2e/inc/: Logger.hpp  Logger_Definitions.hpp
Lib/logger-main-c6abda2e/inc/etl/: String.hpp
Lib/logger-main-c6abda2e/src/: Logger.cpp
Lib/logger-main-c6abda2e/src/Platform/x86/: Logger.cpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
